<resources>
    <string name="app_name">Personal MoneyTracker</string>

    <!--Main menu-->
    <string name="action_settings">Настройки</string>

    <!--Sync-->
    <string name="content_authority" translatable="false">ru.loftschool.loftblogmoneytracker</string>
    <string name="sync_account_type" translatable="false">loftblogmoneytracker.loftschool.ru</string>

    <!--Строки для списка транзакций-->
    <string name="item_text_name">Name</string>
    <string name="item_text_date">Date</string>
    <string name="item_text_sum">Sum</string>
    <string name="item_text_category">Category</string>


    <!--Строки меню для NavigationDrawer-->
    <string name="nav_drawer_expenses">Траты</string>
    <string name="nav_drawer_categories">Категории</string>
    <string name="nav_drawer_statistics">Статистика</string>
    <string name="nav_drawer_settings">Настройки</string>
    <string name="nav_drawer_logout">Выйти</string>
    <string name="nav_drawer_sync">Синхронизировать</string>
    <string name="nav_drawer_subtitle_account">Аккаунт</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--Заголовки фрагментов-->
    <string name="frag_title_expenses">Траты</string>
    <string name="frag_title_categories">Категории</string>
    <string name="frag_title_statistics">Статистика</string>

    <!--Заголовки активити-->
    <string name="act_title_add_expense">Добавить трату</string>
    <string name="act_title_settings">Настройки</string>

    <!--Стркоки для Drawer header-->
    <string name="drawer_header_username">User</string>
    <string name="drawer_header_email">user@gmail.com</string>

    <!--Строки для экрана добавления трат-->
    <string name="text_sum">Сумма</string>
    <string name="text_name">Наименование</string>
    <string name="text_category">Категория</string>
    <string name="text_date">Дата</string>
    <string name="hint_date">Сегодня</string>
    <string name="button_add_expense_text">Добавить трату</string>
    <string name="error_null_price">Введите сумму!</string>
    <string name="error_null_name">Введите наименование!</string>
    <string name="error_input_message">Одно или несколько полей не заполнены!</string>
    <string name="expense_added_text">Трата добавлена: </string>
    <string name="no_categories_message">Не найдено категорий. Невозможно создать трату без категории.</string>

    <!--Splash text-->
    <string name="splash_text">Welcome to Loftblog Money Tracker</string>

    <!--Строки для экрана регистрации и LogIn-->
    <string name="reg_hint_user">Имя пользователя</string>
    <string name="reg_hint_password">Пароль</string>

    <string name="error_null_reg_name">Введите имя пользователя</string>
    <string name="error_null_reg_password">Введите пароль</string>
    <string name="error_exists_reg_name">Такое имя пользователя уже существует</string>
    <string name="error_login_no_such_name">Учетной записи с таким именем не существует</string>
    <string name="error_login_wrong_password">Неверный пароль</string>
    <string name="error_no_internet">Отсутствует подключение к сети</string>

    <string name="reg_success">Регистрация успешно завершена</string>

    <string name="login_screen_header_text">Войти</string>
    <string name="login_screen_btn_login_text">Войти</string>
    <string name="login_screen_new_ac_text">Нет аккаунта? Создать…</string>

    <string name="reg_screen_header_text">Регистрация</string>
    <string name="reg_screen_btn_reg_text">Создать аккаунт</string>
    <string name="reg_screen_login_text">Уже есть аккаунт? Войти…</string>

    <string name="error_unauthorized">Сессия устарела. Пожалуйста, войдите в систему снова.</string>
    <string name="error_min_length">"Минимальное количество символов: "</string>
    <string name="menu_item_logout">Logout</string>

    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="delete">Удалить</string>
    <string name="select_all">Выбрать все</string>

    <string name="error_troubles_connection">Проблемы с подключением</string>
    <string name="error_troubles_server">Проблемы с сервером</string>

    <!--Categories fragment-->
    <string name="category_add_enter_category">Введите название категории</string>
    <string name="category_add_added_text">"Добавлена категория: "</string>
    <string name="error_null_category_name">Название категории должно быть заполнено</string>
    <string name="error_exists_category_name">Такая категория уже существует</string>
    <string name="category_remove_accept">Удалить</string>
    <string name="category_remove_cancel">Отменить</string>
    <string name="category_remove_dialog_title">Удалить выбранные категории?</string>
    <string name="category_remove_dialog_text">Также будут удалены все траты, относящие к выбранным категориям</string>

    <!--UNDO messages-->
    <string name="snackbar_undo">Отменить</string>
    <string name="snackbar_removed_expense">Трата удалена</string>
    <string name="snackbar_removed_expenses">Траты удалены</string>
    <string name="snackbar_removed_category">Категория удалена</string>
    <string name="snackbar_removed_categories">Категории удалены</string>

    <!--Add/edit category-->
    <string name="add_category_title">Добавление категории</string>
    <string name="add_category_btn_cancel_txt">Отмена</string>
    <string name="add_category_btn_ok_txt">Добавить</string>
    <string name="edit_category_title">Редактирование категории</string>
    <string name="edit_category_btn_ok_txt">Сохранить</string>
    <string name="edit_category_changed">"Категория изменена: "</string>

    <!--Search-->
    <string name="search_label">Поиск</string>
    <string name="currency_RUB">\u20BD</string>

    <string-array name="initial_categories">
        <item>Продукты</item>
        <item>Одежда</item>
        <item>Связь</item>
        <item>Развлечения</item>
        <item>Транспорт</item>
        <item>Другое</item>
    </string-array>

    <!--Preferences screen-->
    <string name="pref_notification_section">Уведомления</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_vibro_key" translatable="false">enable_vibro</string>
    <string name="pref_enable_led_key" translatable="false">enable_led</string>
    <string name="pref_enable_sound_key" translatable="false">enable_sound</string>

    <string name="pref_enable_notifications_label">Уведомления о синхронизации</string>
    <string name="pref_enable_vibro_label">Вибрация</string>
    <string name="pref_enable_led_label">Световой индикатор</string>
    <string name="pref_enable_sound_label">Звук</string>

    <string name="pref_enable_notifications_true">ВКЛ.</string>
    <string name="pref_enable_notifications_false">ВЫКЛ.</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- String for notification bar-->
    <string name="notification_message">Данные синхронизированы</string>

    <!--Edit category-->
    <string name="edit_expense_title">Редактирование траты</string>
    <string name="edit_expense_save_btn_txt">Сохранить</string>
    <string name="edit_expense_cancel_btn_txt">Отмена</string>
    <string name="edit_expense_changed">"Трата изменена: "</string>

    <!--Statistics-->
    <string name="pie_chart_description">Распределение трат по категориям</string>
    <string name="pie_chart_title">ВСЕГО:</string>

    <!--Synchronization-->
    <string name="sync_categories_ok">Синхронизация категорий успешно завершена</string>
    <string name="sync_categories_failed">При синхронизации категорий возникла ошибка</string>
    <string name="sync_expenses_ok">Синхронизация трат успешно завершена</string>
    <string name="sync_expenses_failed">При синхронизации трат возникла ошибка</string>
    <string name="update_data_text">Обновление данных…</string>

</resources>
