<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_expenses"
            android:title="@string/nav_drawer_expenses"
            android:icon="@drawable/ic_expenses"
            android:checked="true">
        </item>
        <item
            android:id="@+id/drawer_item_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/nav_drawer_categories">
        </item>
        <item
            android:id="@+id/drawer_item_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/nav_drawer_statistics">
        </item>
        <item
            android:id="@+id/drawer_item_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_drawer_settings">
        </item>
    </group>
    <item android:title="@string/nav_drawer_subtitle_account">
        <menu>
            <item
                android:id="@+id/drawer_item_sync"
                android:icon="@drawable/ic_sync_white_24dp"
                android:title="@string/nav_drawer_sync" />

            <item
                android:id="@+id/drawer_item_logout"
                android:icon="@drawable/ic_exit_to_app_white_48dp"
                android:title="@string/nav_drawer_logout" />
        </menu>
    </item>


</menu>