<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_expenses"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_marginTop="@dimen/card_margin"
    android:layout_marginBottom="@dimen/card_margin"
    card_view:cardBackgroundColor="@color/background"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardUseCompatPadding="true">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:id="@+id/expense_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/text_margins"
            android:layout_marginTop="@dimen/text_margin_top"
            android:textSize="@dimen/medium_main_text"
            android:text="@string/item_text_name"/>

        <!--field Category for testing of Categories-Expenses relation-->
        <TextView
            android:id="@+id/expense_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/expense_name_text"
            android:layout_marginLeft="@dimen/text_margins"
            android:layout_marginTop="@dimen/text_margin_top"
            android:textSize="@dimen/medium_main_text"
            android:textStyle="italic"
            android:textColor="@color/primary"
            android:text="@string/item_text_category"/>

        <TextView
            android:id="@+id/expense_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/text_margins"
            android:textSize="@dimen/small_main_text"
            android:text="@string/item_text_date"
            android:layout_below="@+id/expense_name_text"/>

        <TextView
            android:id="@+id/expense_sum_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/text_margins"
            android:textSize="@dimen/medium_main_text"
            android:text="@string/item_text_sum"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>