<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    card_view:cardBackgroundColor="@color/background"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/text_margins"
            android:layout_marginTop="@dimen/text_margins"
            android:textSize="@dimen/medium_main_text"
            android:text="@string/item_text_name"/>

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/text_margins"
            android:textSize="@dimen/small_main_text"
            android:text="@string/item_text_date"
            android:layout_below="@+id/name_text" />

        <TextView
            android:id="@+id/sum_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/text_margins"
            android:layout_marginTop="@dimen/text_margins"
            android:textSize="@dimen/medium_main_text"
            android:text="@string/item_text_sum"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>