<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/AppTheme.DialogMetrics"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_centerInParent="true">

    <TextView
        style="@style/AddCategoryText"
        android:id="@+id/new_category_title"
        android:text="@string/add_category_title"
        android:textSize="@dimen/large_main_text"
        android:textStyle="bold"
        android:textColor="@color/primaryDark" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/categoryWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/text_padding"
        android:paddingBottom="@dimen/text_padding">

        <EditText
            style="@style/AddCategoryText"
            android:id="@+id/new_category_name"
            android:textSize="@dimen/medium_main_text"
/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/add_category_btn_height"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:text="@string/add_category_btn_cancel_txt"
            android:textColor="@color/primaryDark"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="left"
            android:elevation="@dimen/btn_elevation"
            android:clickable="true" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="@dimen/add_category_btn_height"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:text="@string/add_category_btn_ok_txt"
            android:textColor="@color/primaryDark"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right"
            android:elevation="@dimen/btn_elevation" />

    </RelativeLayout>
</LinearLayout>