<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/AppTheme.DialogMetrics"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_centerInParent="true">

    <TextView
        style="@style/AddCategoryText"
        android:id="@+id/new_category_title"
        android:text="@string/add_category_title"
        android:textSize="@dimen/large_main_text"
        android:textStyle="bold"
        android:textColor="@color/primaryDark" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/categoryWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/text_padding"
        android:paddingBottom="@dimen/text_padding">

        <EditText
            style="@style/AddCategoryText"
            android:id="@+id/new_category_name"
            android:textSize="@dimen/medium_main_text" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/action_btn_height"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/add_category_btn_ok_txt"
            android:textColor="@color/primaryDark"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:layout_gravity="end"
            android:gravity="end|center_vertical"
            android:shadowColor="@android:color/transparent"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/action_btn_height"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/add_category_btn_cancel_txt"
            android:textColor="@color/primaryDark"
            android:layout_toLeftOf="@id/btn_ok"
            android:layout_gravity="end"
            android:padding="8dp"
            android:gravity="end|center_vertical"
            android:shadowColor="@android:color/transparent"/>
    </RelativeLayout>
</LinearLayout>